Fix alignment and href link styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,13 +18,13 @@ hr {
   border-width: 6px;
   border-color: #dbe2ef;
   width: 5%;
-  margin: 40px auto 40px auto;
+  margin: 40px auto;
 }
 
 h1 {
   color: #112d4e;
-  font-size: 30px;
-  font-family: sans-serif;
+  font-size: 36px;
+  font-family: 'fenixregular';
 }
 
 h3 {
@@ -35,14 +35,13 @@ h3 {
 
 p {
   font-family: 'fenixregular';
-  font-size: 15px;
   color: #112d4e;
 }
-
 
 /****************CLASS SELECTORS******************/
 .container-intro {
   background-color: #dbe2ef;
+  padding-top: 50px;
   padding-bottom: 30px;
 }
 
@@ -70,7 +69,7 @@ p {
 }
 
 .table-skill {
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
 }
 
 /****************ID SELECTORS******************/
